bookinfo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    istio.io/dataplane-mode: none
    istio.io/rev: "1-27-1"
    # istio-injection: enabled
